# vcm

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.postgres.yml  docker-compose.traefik.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
app/: backup.py  config.py  db.py  main.py  models.py  notify.py  templates_env.py
app/pki/: ca.py  csr.py  keys.py  material.py
app/routers/: admin.py  api.py  auth.py  pki.py  profile.py  sites.py  ui.py
app/security/: apitokens.py  audit_chain.py  crypto.py  deps.py  ipfilter.py  mfa.py  passwords.py  sessions.py
app/srx/: bgp.py  defaults.py  diff.py  generators.py  importer.py  interop.py  model.py  proposals.py  rename.py  suggest.py
app/static/: collapsible.js  style.css  theme.js  vendor-form.js  webauthn.js
app/templates/: _macros.html  admin.html  audit.html  backups.html  base.html  bothends.html  ca_detail.html  cert.html  cert_import_ca.html  config_diff.html  connection.html  connection_edit.html  dashboard.html  defaults.html  enroll.html  error.html  farend.html  first_password.html  import.html  import_review.html  login.html  mfa.html  pki.html  profile.html  reconcile.html  relationships.html  rename.html  site.html  sites.html  user.html
deploy/: cloudflared.md  nginx.conf  traefik.yml
docs/: api.md  authentication.md  configuration.md  deployment.md  pki.md  vendors.md
tests/: test_audit_chain.py  test_collapse_panels.py  test_core.py
vcm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
