[project]
name = "vcm"
version = "0.1.0"
description = "VPN & Certificate Manager — MFA-protected PKI and VPN config generator for Juniper SRX, Digi, Cradlepoint, and pfSense appliances"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "itsdangerous>=2.2",
    "argon2-cffi>=23.1",
    "cryptography>=42.0",
    "pyotp>=2.9",
    "qrcode>=7.4",
    "webauthn>=2.1",
    "psycopg[binary]>=3.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27", "ruff>=0.5"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
